--- a/Script/06_Extrapolation_forSpinUP.Rmd
+++ b/Script/06_Extrapolation_forSpinUP.Rmd
@@ -90,7 +90,7 @@ effort<-effort[,-1]
 effort<-effort %>% 
   filter(FGroup != "Unknown_EEZ")
 
-head(effort)
+# head(effort)
 
 ```
 
@@ -101,10 +101,10 @@ head(effort)
 catch<- read_csv("/rd/gem/private/users/yannickr/catch_histsoc_1869_2017.csv")
 
 # calculate catch as sum of reported and IUU, discards are generally not considered - as per Reg's comment (see 07_cacth_data.rmd) 
-# catch$catch_tot<-catch$Reported + catch$IUU 
+catch$catch_tot<-catch$Reported + catch$IUU
 
-# not sure about above as this might have referred to historical only... 
-catch$catch_tot<-catch$Reported + catch$IUU + catch$Discards
+# not sure about above as this might have referred to historical only... but see email conversation with Reg on discards 
+# catch$catch_tot<-catch$Reported + catch$IUU + catch$Discards
 
 head(catch)
 
@@ -202,7 +202,7 @@ effort_extrapolate<-function(toKeep, kappa, war_param, war_decision, reference){
   # plot(df$Year,df$gam,col="red",type='l', ylim=ylim)
 
   # predict backwards
-  newd <- data.frame(Year = seq(1850, maxVar$Year))
+  newd <- data.frame(Year = seq(1861, maxVar$Year))
   newd$pred <- predict.gam(gam_model,newd,type='response') 
   newd$pred <- ifelse(newd$pred<=0, 0, newd$pred)
   
@@ -335,6 +335,15 @@ effort_extrapolate<-function(toKeep, kappa, war_param, war_decision, reference){
     final_df<-effort_all %>% 
       full_join(catch_all2, by = "Year")
     
+    # add 1841-1860 at 1861 fixed values
+    trial<-final_df %>% 
+      filter(Year == 1861) 
+  
+    add_df<-data.frame(Year = seq(1841, 1860), NomActive = rep(trial$NomActive, 20))
+  
+    final_df<-final_df %>% 
+      full_join(add_df)
+    
     # # relative to 1950
     # # WARNING CHECK THIS - not sure we need it 
     # ref<-final_df %>% 
@@ -395,16 +404,18 @@ effort_extrapolate<-function(toKeep, kappa, war_param, war_decision, reference){
     }
     
     # create data for annotation 
-    yMax = max(filter(final_df, Type == "catch_tot")$Value, na.rm = TRUE)
-    ann_text <- data.frame(Year = c(1850+5,1950+2,1961+15,2010+5), Value = rep(yMax,4), lab = c("Spin-up","Transition","Experiment", "Validation"), group = rep("Catch (tonnes)", 4), Data = rep("Reconstructed values", 4), Considered = rep("Yes", 4))
+    yMax = max(filter(final_df, Type == "NomActive")$Value, na.rm = TRUE)
+    # ann_text <- data.frame(Year = c(1841+10,1861+15,1961+15), Value = rep(yMax,3), lab = c("Spin-up","Transition","Experiment"), group = rep("Effort (nominal, DkW)", 3), Data = rep("Reconstructed values", 3), Considered = rep("Yes", 3))
+    
+    ann_text <- data.frame(Year = c(1841+10,1961+15), Value = rep(yMax,2), lab = c("Transition","Experiment"), group = rep("Effort (nominal, DkW)", 2), Data = rep("Reconstructed values", 2), Considered = rep("Yes", 2))
     
     plot<-ggplot(data = final_df_plot, aes(x = Year, y = Value, group = Data, color = Data, shape=Considered)) +
       ggtitle(paste("LME", toKeep, sep = " "))+
       facet_wrap(~group, scales = "free", nrow = 2)+
-      annotate("rect",xmin=1850, xmax=1950, ymin=0, ymax=Inf, fill = "#edf8fb", alpha = 0.4)+ # spin-up
-      annotate("rect",xmin=1950, xmax=1961, ymin=0, ymax=Inf, fill = "#b2e2e2", alpha = 0.4)+ # transition
-      annotate("rect",xmin=1961, xmax=2010, ymin=0, ymax=Inf, fill = "#66c2a4", alpha = 0.4)+ # projection 
-      annotate("rect",xmin=2010, xmax=2017, ymin=0, ymax=Inf, fill = "#238b45", alpha = 0.4)+ # validation
+      annotate("rect",xmin=1841, xmax=1960, ymin=0, ymax=Inf, fill = "#b2e2e2", alpha = 0.4)+ # spin-up edf8fb
+      # annotate("rect",xmin=1861, xmax=1960, ymin=0, ymax=Inf, fill = "#66c2a4", alpha = 0.4)+ # transition b2e2e2
+      annotate("rect",xmin=1961, xmax=2010, ymin=0, ymax=Inf, fill = "#238b45", alpha = 0.4)+ # projection 66c2a4
+      # annotate("rect",xmin=2010, xmax=2017, ymin=0, ymax=Inf, fill = "#238b45", alpha = 0.4)+ # validation 238b45
       geom_text(data = ann_text,label = ann_text$lab, color = "Black", size = 2)+
       geom_point(data = filter(final_df_plot, Data == "Reconstructed values"),size=1)+
       geom_line(data = filter(final_df_plot, Data == "GAM predictions")) +
@@ -597,20 +608,41 @@ df_kappa = 6
 
 if(df_kappa ==6){ # better capture trends 
   
+  # but avoid an increase in effort from 1950 to 1841: 
   kappa_values<-data.frame(lme = toKeep, kappa = 6)  
-  kappa_values[c(5,13,19,31,56,57,61)+1, 2]<-5
-  kappa_values[c(8)+1, 2]<-4
+  kappa_values[c(5,13,19,56,57,61)+1, 2]<-5
+  kappa_values[c(8)+1, 2]<-4 
 
   # correct trends - Jerome comments
-  # LME 40 not capturing slow increase in effort and resulting in high effort between 1850 and 1950, try playing with the smoothing parameter.
+  # LME 40 not capturing slow increase in effort and resulting in high effort between 1841 and 1950, try playing with the smoothing parameter.
   kappa_values[c(40)+1, 2]<-3 # 4 and 5 won't make a change # 3 works
 
-  # LME 29 and 31 same as above - but I doubt this will change things as flat trend on the last years of data.
-  kappa_values[c(29)+1, 2]<-4 # 5 or 7 means increases # 4 works
-  kappa_values[c(31)+1, 2]<-5 # 5 works
+  # LME 29 and 31 same as above
+  kappa_values[c(29,31)+1, 2]<-4 # 5 or 7 means increases # 4 works
   
   # LME 66 - warning when fitting the GAM  
-  kappa_values[c(66)+1, 2]<-4 # kappa =5 solves the problem but kappa = 4 gives a better plot
+  kappa_values[c(66)+1, 2]<-4 # kappa = 5 solves the problem but kappa = 4 gives a better plot
+  
+  # LME that do not go to 0 by 1841 or have large bumps between 1841 and 1950 - try lowering kappa 
+  # 3,6,7,10 - no difference when lowering kappa - this is just due to the data itself 
+  # 9 - worst 
+  # 22 - 3 decreasing trend and getting closer to 0 but bad fit, 4 & 5 wrong (increasing)
+  # 24 - small difference : 3 increasing, *4* nice and close to 6 but bigger bump around 1930 and lower effort in 1841, 5 wrong
+  # 26 - slightly better 6
+  # 42 - 3 better but fit is worst, 4 bad, *5* better and fit is OK 
+  kappa_values[c(42)+1, 2]<-5
+  # 43 - bump: 3 bad, *4* ok not sure which one is better, 5 bad 
+  # kappa_values[c(43)+1, 2]<-4
+  # 44 - bump: 4 fixes the bump but not sure this is OK as effort drops really quickly, 3 and 5 bad 
+  # 49 - bump: 3 bump fixed but no fit, 4 better but not great fit, 5 same as 6 but worst fit 
+  # 50, 51 - bump: not sure it should be fixed 
+  # 54 - high/ish values at start of time series: could decrease quicker with *5* 
+  kappa_values[c(54)+1, 2]<-5
+  # 55 - bump in experiment - not important has here raw data is used
+  # 57 - already lowered to 5 and OK (3 bad fit) *4* is the same as 5 but because we fit to few points should we prefer 4? 
+  # kappa_values[c(57)+1, 2]<-4
+  # 59 - high/ish values at start of time series: no changes with kappas  
+  # 60 - all values ok but 6 has better fit and goes to 0 
   
 }else if (df_kappa == 3){ # assumes a "perfect" logistic 
   
@@ -626,11 +658,15 @@ plot_reconstructed_effort_LME_war_ref<-list()
 tic()
 for(i in 1:length(toKeep)){
   
-  # i = 67
+  # i = 57+1
   print(toKeep[[i]])
 
   # yes war data when fitting GAM do not re-add original data as otherwise you overwrite predictions, reference mean over a decade
   b<-effort_extrapolate(toKeep[[i]], kappa = kappa_values[i,2], war_param = "include", war_decision = "no-add", reference = "1945-1955")
+  
+  # pdf("Output/LME31.pdf")
+  # b$plot_reconstructed_effort_LME
+  # dev.off()
 
   reconstructed_effort_LME_war_ref[[i]]<-b$reconstructed_effort_LME
   names(reconstructed_effort_LME_war_ref)[i]<-toKeep[i]
@@ -653,7 +689,7 @@ toc() # 103.332 sec elapsed
 # plot_reconstructed_effort_LME_war_ref[[62]]
 
 # show north sea
-plot_reconstructed_effort_LME_war_ref[[23]]
+# plot_reconstructed_effort_LME_war_ref[[23]]
 
 # adjust LME 64 ----
 # in LME 64 (central Arctic) effort increases back in time - use trends in LME 65 (Aleutian Island)
@@ -663,8 +699,11 @@ plot_reconstructed_effort_LME_war_ref[[23]]
 trial<-reconstructed_effort_LME_war_ref[[65]] 
 trial1<-reconstructed_effort_LME_war_ref[[66]]
 
+# sort(unique(trial$Year))
+# sort(unique(trial1$Year))
+
 # from function above
-# use the rate of change in trial1 to calculate trial (1850-1950)
+# use the rate of change in trial1 to calculate trial (1841-1950)
 
 # 1B. calculate rate of change based on mean 1945-1955 years - line 225 + 243
 # df = trial1
@@ -681,6 +720,8 @@ rate_of_change<-trial1 %>%
   mutate(rate = 100 * (Value - ref)/ref) %>% 
   mutate(Trial_back = ref + (rate/100)*ref) # only to check  
 
+unique(sort(rate_of_change$Year))
+
 # 2. extend effort back using rate of change in catch - line 251
 # 2B. extend effort back using rate of change in catch using decade mean 
 # effort_extr = trial
@@ -694,6 +735,19 @@ to_substitute<-trial %>%
   full_join(select(rate_of_change, Year, rate)) %>% 
   mutate(Value = ref + (rate/100)*ref) %>% 
   select(-rate)
+
+# unique(sort(to_substitute$Year))
+
+# add 1841-1860 at 1861 fixed values - this should be part of the above - but just in case do it again ... NO checked - it is part of the above and effort is kept at 17 as per effort in 1861 
+add_df<-to_substitute %>%
+  filter(Year == 1861)
+
+# filter(to_substitute, Year <1860)
+
+# add_df<-data.frame(Year = seq(1841, 1860), Value = rep(add_df$Value, 20))
+# 
+# to_substitute<-to_substitute %>%
+#   full_join(add_df)
 
 trial2<-trial %>% 
   filter(Year >= 1950, Type %in% c("NomActive", "catch_tot")) %>% # keep only catch (no historical available) and effort. 
@@ -711,7 +765,7 @@ trial2<-trial %>%
 #   # mutate(Data = "GAM predictions")
 
 toAddPred<-to_substitute %>% 
-  mutate(Type = "pred")
+  mutate(Type = ifelse(Year > 1860,"pred", NA))
 
 trial3<- trial2 %>% 
   full_join(toAddPred) %>% 
@@ -728,9 +782,12 @@ trial3_toPlot<-trial3 %>%
   mutate(Data = ifelse(Data == "pred", "GAM predictions", "Reconstructed values"))
 
 # plot 
-yMax=max(filter(trial3_toPlot, group == "Catch (tonnes)")$Value)
-ann_text <- data.frame(Year = c(1850+5,1950+2,1961+15,2010+5,1850+20), Value = c(rep(yMax,4),yMax-50), lab = c("Spin-up","Transition","Experiment", "Validation","*Predictions taken from LME 65"), group = rep("Catch (tonnes)", 5), Data = rep("Reconstructed values", 5), Considered = rep("Yes", 5))
-    
+
+yMax = max(filter(trial3, Type == "NomActive")$Value, na.rm = TRUE)
+# ann_text <- data.frame(Year = c(1841+10,1861+15,1961+15,1841+30), Value = c(rep(yMax,3),yMax-25000), lab = c("Spin-up","Transition","Experiment","*Predictions taken from LME 65"), group = rep("Effort (nominal, DkW)", 4), Data = rep("Reconstructed values", 4), Considered = rep("Yes", 4))
+
+ann_text <- data.frame(Year = c(1841+10,1961+15,1841+30), Value = c(rep(yMax,2),yMax-25000), lab = c("Transition","Experiment","*Predictions taken from LME 65"), group = rep("Effort (nominal, DkW)", 3), Data = rep("Reconstructed values", 3), Considered = rep("Yes", 3))
+
 # make "yes" always a dot and never a square 
 scale_fill_chris <- function(...){
   ggplot2:::manual_scale(
@@ -743,10 +800,9 @@ scale_fill_chris <- function(...){
 plot_LME64<-ggplot(data = trial3_toPlot, aes(x = Year, y = Value, group = Data, color = Data)) + # shape=Considered
   ggtitle(paste("LME 64", sep = " "))+
   facet_wrap(~group, scales = "free", nrow = 2)+
-  annotate("rect",xmin=1850, xmax=1950, ymin=0, ymax=Inf, fill = "#edf8fb", alpha = 0.4)+ # spin-up
-  annotate("rect",xmin=1950, xmax=1961, ymin=0, ymax=Inf, fill = "#b2e2e2", alpha = 0.4)+ # transition
-  annotate("rect",xmin=1961, xmax=2010, ymin=0, ymax=Inf, fill = "#66c2a4", alpha = 0.4)+ # projection
-  annotate("rect",xmin=2010, xmax=2017, ymin=0, ymax=Inf, fill = "#238b45", alpha = 0.4)+ # validation
+  annotate("rect",xmin=1841, xmax=1960, ymin=0, ymax=Inf, fill = "#b2e2e2", alpha = 0.4)+ # spin-up edf8fb
+  # annotate("rect",xmin=1861, xmax=1960, ymin=0, ymax=Inf, fill = "#66c2a4", alpha = 0.4)+ # transition b2e2e2
+  annotate("rect",xmin=1961, xmax=2010, ymin=0, ymax=Inf, fill = "#238b45", alpha = 0.4)+ # projection 66c2a4
   geom_text(data = ann_text,label = ann_text$lab, color = "Black", size = 2)+
   geom_point(data = filter(trial3_toPlot, Data == "Reconstructed values"),size=1)+
   geom_line(data = filter(trial3_toPlot, Data == "GAM predictions"))+
@@ -768,23 +824,30 @@ plot_reconstructed_effort_LME_war_ref[[65]]<-plot_LME64
 # check empty LME and remove from the list - it should be none
 plot_reconstructed_effort_LME_war_ref<-plot_reconstructed_effort_LME_war_ref[lapply(plot_reconstructed_effort_LME_war_ref,length)>0]
 
-# if(df_kappa == 6){
-#   name = "Output/reconstructed_effort_for_spinup_totLME2_JeromeComments_kappa6.pdf"
-# }else if (df_kappa == 3){
-#   name = "Output/reconstructed_effort_for_spinup_totLME2_JeromeComments_kappa3.pdf"
-# }
-
-# if total catch included discards: 
-
 if(df_kappa == 6){
-  name = "Output/reconstructed_effort_for_spinup_totLME2_JeromeComments_kappa6_discards.pdf"
+  name = "Output/reconstructed_effort_for_spinup_totLME2_JeromeComments_kappa6_1841_fixedValues_kappaLME31.pdf"
 }else if (df_kappa == 3){
-  name = "Output/reconstructed_effort_for_spinup_totLME2_JeromeComments_kappa3_discards.pdf"
+  name = "Output/reconstructed_effort_for_spinup_totLME2_JeromeComments_kappa3_1841_fixedValues_kappaLME31.pdf"
 }
+
+# if total catch included discards - no need see comment above:  
+
+# if(df_kappa == 6){
+#   name = "Output/reconstructed_effort_for_spinup_totLME2_JeromeComments_kappa6_discards.pdf"
+# }else if (df_kappa == 3){
+#   name = "Output/reconstructed_effort_for_spinup_totLME2_JeromeComments_kappa3_discards.pdf"
+# }
 
 pdf(name, height = 8, width = 6)
 marrangeGrob(grobs = plot_reconstructed_effort_LME_war_ref, nrow=2, ncol=1)
 dev.off()
+
+# # check 
+# reconstructed_effort_LME_war_ref[[1]]
+# reconstructed_effort_LME_war_ref[[65]]
+
+### SAVE DATA HERE as you need to create a plot of effort and gfdl intpp for the north sea in plotGFDLinputs 
+# save.image(file = "~/FishingEffort/Data/temp_effort.RData")
 
 ```
 
@@ -794,11 +857,11 @@ dev.off()
 
 effort_spread<-function(historical_effort, recent_effort, toKeep, reference){
   
-  # # trial 
-  # toKeep = 1
-  # reference = "1950"
-  # historical_effort = reconstructed_effort_LME[[1]]
-  # recent_effort = recent_effort[[1]]
+  # # # trial
+  # historical_effort = decision[[1]] # effort from 1841 to 2017 at LME level from analysis above - missing groups (eez, gear, fgroup, saup, sector, etc.)
+  # recent_effort = recent_effort # effort from 1950 to 2017 with all groups 
+  # toKeep = toKeep[[1]]
+  # reference = "1950-1960"
   
   # calculate effort distribution across group using 1950-1960, if you use one year only you might miss important groups not represented in 1950 
   if(reference == "1950"){
@@ -806,28 +869,37 @@ effort_spread<-function(historical_effort, recent_effort, toKeep, reference){
       filter(Year == 1950)
     }else{
       recent_effortB<-recent_effort %>% 
-        filter(Year >= 1950, Year <=1960) # strange final plots
+        filter(Year >= 1950, Year <=1960)
     }
   
+  # this is done for each LME (LME in grouping below is not necessary). 
+  # recent_effort is effort from 1950-2017 and recent_effortB is effort from 1950-1960 (reference years) including all groups
+  # NOTE from recent_effort you consider CONTRIBUTIONS by groups 
+  # first you calculate the average effort by group 1950-1960 (reference effort)
+  # then you calculate the effort contribution of each group. at the LME level this sums to 1 
+  
   recent_effortB<-recent_effortB %>% 
-    group_by(eez_country_name,SAUP,Gear,FGroup,Sector, LME) %>% 
+    group_by(eez_country_name,SAUP,Gear,FGroup,Sector,LME) %>% 
     summarise(NomActive = mean(NomActive, na.rm = TRUE)) %>% 
     ungroup() %>% 
     mutate(contribution = NomActive/sum(NomActive, na.rm = TRUE))
   
   # check
-  # sum(recent_effortB$contribution, na.rm = TRUE)
+  sum(recent_effortB$contribution, na.rm = TRUE)
   
-  # create all combinations of groups and historical years 
-  Year= seq(1850,1949)
+  # now you work on the historical data 1841-1950.
+  # FIRST - create all combinations of groups in historical years - e.g. 1841 all eez, saup, grear, fgroup, sector present in the reference years (1950-1960) with contribution being constant across year (proportions don't change, effort does), 1842 same story ... 
+  Year= seq(1841,1949)
   toExpend<-recent_effortB %>% 
     select(-NomActive) %>% 
     unique()
 
-  toExpend<-rbindlist(lapply(1850:1949, function(x,d) data.frame(d, Year=x), d=toExpend))
+  toExpend<-rbindlist(lapply(1841:1949, function(x,d) data.frame(d, Year=x), d=toExpend))
   toExpend<-as_tibble(toExpend)
   
-  # get effort by year for 1850-1950
+  # SECOND - get effort value by year for 1841-1950
+  # NOTE from historical_effort you consider EFFORT VALUES by year withing LME 
+  # not much done here, just data wrangling to get year, effort dataset
   historical_effort<-historical_effort %>% 
     filter(Type == "NomActive") %>% # Here can keep catches too 
     select(-group, -Considered) %>% 
@@ -835,21 +907,45 @@ effort_spread<-function(historical_effort, recent_effort, toKeep, reference){
     filter(!is.na(NomActive)) %>% # catch data goes to 2017 but effort to 2010 - source of NAs 
     rename(NomActive_pred = NomActive) 
 
-  # merge info on historical effort by year and groups 
-  final_df<-filter(historical_effort, Year <1950) %>% 
+  # THIRD - merge historical effort values with groups from recent_effortB (through toExpand)
+  # and calculate NomActive for each group based on: historical effort values*effort contribution by each group in 1950-1960 (from recent_effortB) 
+  final_df<-filter(historical_effort, Year <1950) %>% # this are the only year that we need to reconstruct and merge with recent_effort
     full_join(toExpend) %>% 
     mutate(NomActive = NomActive_pred*contribution) %>% 
     select(-NomActive_pred, -contribution)
   
-  # check - WARNING - not as expected for decadal 
-  trial<- final_df %>% filter(Year ==1850) %>% mutate(a = sum(NomActive))
+  # # check - ok - the sum of effort at the LME level matches .... 
+  # final_df %>% filter(Year ==1841) %>% mutate(a = sum(NomActive))
+  # decision[[1]] %>% filter(Year ==1841) # compare a with original data
 
-  # merge historical and recent effort
-  # WARNING - needs checking 
-  final_df<- lazy_dt(final_df) %>% 
-    full_join(lazy_dt(recent_effort)) %>% 
-    as.data.frame()
+  # FORTH - merge merge historical effort where contributions to the groups has been calculated above (1841-1950) with recent_effort (1950-2017)
+  # sort(unique(final_df$Year))
+  # sort(unique(recent_effort$Year))
+  # 
+  # tic()
+  # final_df1<- lazy_dt(final_df) %>%
+  #   full_join(lazy_dt(recent_effort)) %>%
+  #   as.data.frame()
+  # toc()
   
+  # tic()
+  final_df<- final_df %>% 
+    full_join(recent_effort) %>% 
+    as.data.frame()
+  # toc()
+  
+  # # check they give the same ouputs -  
+  # trial<-final_df1 %>% 
+  #   group_by(Year) %>% 
+  #   summarise(effort = sum(NomActive, na.rm = TRUE)) %>%
+  #   ungroup()
+  # 
+  # pdf("Output/trial.pdf", height = 8, width = 6)
+  # ggplot(trial, aes(x = Year, y = effort))+
+  #   geom_point()
+  # dev.off()
+  
+  # final df for plotting 
   data_plot<-final_df %>%
     group_by(Year, Gear) %>% 
     summarise(NomActive = sum(NomActive, na.rm = TRUE)) %>% 
@@ -863,17 +959,22 @@ effort_spread<-function(historical_effort, recent_effort, toKeep, reference){
   # create data for annotation 
   yMax = max(data_plot$NomActive, na.rm = TRUE)
     
-  ann_text <- data.frame(Year = c(1850+5,1950+2,1961+15,2010+5), NomActive = rep(yMax,4), lab = c("Spin-up","Transition","Experiment", "Validation"), Gear = rep(unique(data_plot$Gear)[1], 4))
-    
+  # ann_text <- data.frame(Year = c(1841+10,1861+15,1961+15), NomActive = rep(yMax,3), lab = c("Spin-up","Transition","Experiment"), Gear = rep(unique(data_plot$Gear)[1], 3))
+  
+  ann_text <- data.frame(Year = c(1841+10,1961+15), NomActive = rep(yMax,2), lab = c("Transition","Experiment"), Gear = rep(unique(data_plot$Gear)[1], 2))
+  
   plot<-ggplot(data = data_plot, aes(x = Year, y = NomActive, group = Gear, color = Gear)) +
     ggtitle(paste("LME", toKeep, sep = " "))+ # WARNING - check this is correct
-    annotate("rect",xmin=1850, xmax=1950, ymin=0, ymax=Inf, fill = "#edf8fb", alpha = 0.4)+ # spin-up
-    annotate("rect",xmin=1950, xmax=1961, ymin=0, ymax=Inf, fill = "#b2e2e2", alpha = 0.4)+ # transition
-    annotate("rect",xmin=1961, xmax=2010, ymin=0, ymax=Inf, fill = "#66c2a4", alpha = 0.4)+ # projection 
-    annotate("rect",xmin=2010, xmax=2017, ymin=0, ymax=Inf, fill = "#238b45", alpha = 0.4)+ # validation
+    annotate("rect",xmin=1841, xmax=1960, ymin=0, ymax=Inf, fill = "#b2e2e2", alpha = 0.4)+ # spin-up edf8fb
+    # annotate("rect",xmin=1861, xmax=1960, ymin=0, ymax=Inf, fill = "#66c2a4", alpha = 0.4)+ # transition b2e2e2
+    annotate("rect",xmin=1961, xmax=2010, ymin=0, ymax=Inf, fill = "#238b45", alpha = 0.4)+ # projection 66c2a4
+    # annotate("rect",xmin=1841, xmax=1950, ymin=0, ymax=Inf, fill = "#edf8fb", alpha = 0.4)+ # spin-up
+    # annotate("rect",xmin=1950, xmax=1961, ymin=0, ymax=Inf, fill = "#b2e2e2", alpha = 0.4)+ # transition
+    # annotate("rect",xmin=1961, xmax=2010, ymin=0, ymax=Inf, fill = "#66c2a4", alpha = 0.4)+ # projection 
+    # annotate("rect",xmin=2010, xmax=2017, ymin=0, ymax=Inf, fill = "#238b45", alpha = 0.4)+ # validation
     geom_text(data = ann_text,label = ann_text$lab, color = "Black", size = 2)+
-    geom_line() +
-    # geom_line() +
+    geom_line(size = 0.5)+
+    geom_point(size = 0.5)+
     my_theme
     
   if(reference == "1950"){
@@ -884,6 +985,11 @@ effort_spread<-function(historical_effort, recent_effort, toKeep, reference){
       geom_vline(xintercept=1950, linetype="dashed", color = "red", size=0.5)+
       geom_vline(xintercept=1960, linetype="dashed", color = "red", size=0.5)
   }
+  
+  # # check with gear and FGroup - OK
+  # pdf("Output/trial1.pdf", height = 8, width = 6)
+  # plot
+  # dev.off()
     
   return(list(final_df = final_df, plot = plot))
   
@@ -894,6 +1000,8 @@ effort_spread<-function(historical_effort, recent_effort, toKeep, reference){
 ## Allocate reconstructed effort across groups loop
 
 ```{r allocate loop, echo = FALSE, fig.width=10, fig.height=7}
+
+# load("~/FishingEffort/Data/temp_effort.RData")
 
 # decide on version above: 
 decision<-reconstructed_effort_LME_war_ref
@@ -906,7 +1014,8 @@ plot_reconstructed_effort_ref<-list()
 
 for(i in 1:length(decision)){
 
-  # print(toKeep [[i]])
+  # i = 1
+  print(toKeep [[i]])
   
   recent_effort<-filter(effort, LME == toKeep [[i]])
   
@@ -917,8 +1026,8 @@ for(i in 1:length(decision)){
   # names(reconstructed_effort)[i]<-toKeep[i]
   # plot_reconstructed_effort[[i]] = a$plot
   # names(plot_reconstructed_effort)[i]<-toKeep[i]
-  
-  b<-effort_spread(decision[[i]], recent_effort, toKeep[[i]], reference = "1950-1960")
+
+  b<-effort_spread(historical_effort = decision[[i]], recent_effort = recent_effort, toKeep = toKeep[[i]], reference = "1950-1960")
   
   reconstructed_effort_ref[[i]] = b$final_df
   names(reconstructed_effort_ref)[i]<-toKeep[i]
@@ -963,34 +1072,128 @@ plot_reconstructed_effort_ref[[23]]
 # check empty LME and remove from the list - it should be none
 plot_reconstructed_effort_ref<-plot_reconstructed_effort_ref[lapply(plot_reconstructed_effort_ref,length)>0]
 
-# pdf("Output/reconstructed_effort_for_spinup_JeromeComments.pdf", height = 8, width = 6)
-# marrangeGrob(grobs = plot_reconstructed_effort_ref, nrow=2, ncol=1)
-# dev.off()
-
-# if total cacthes included discards 
-pdf("Output/reconstructed_effort_for_spinup_JeromeComments_discards.pdf", height = 8, width = 6)
+pdf("Output/reconstructed_effort_for_spinup_JeromeComments_1841_fixedValues_kappaLME31.pdf", height = 8, width = 6)
 marrangeGrob(grobs = plot_reconstructed_effort_ref, nrow=2, ncol=1)
 dev.off()
 
-# save data ----
-reconstructed_effort_ref<-do.call(rbind.data.frame, reconstructed_effort_ref)
+# if total cacthes included discards - no need see comment bove  
+# pdf("Output/reconstructed_effort_for_spinup_JeromeComments_discards.pdf", height = 8, width = 6)
+# marrangeGrob(grobs = plot_reconstructed_effort_ref, nrow=2, ncol=1)
+# dev.off()
 
+# from list to df data ----
+
+reconstructed_effort_ref_all<-do.call(rbind.data.frame, reconstructed_effort_ref)
+
+```
+
+## check EEZ
+
+```{r}
+
+# # check LME and EEZ interactions 
+# trial<-effort %>% 
+#   select(LME, eez_country_name) %>% 
+#   unique()
+# 
+# trial<-arrange(trial, eez_country_name, LME)
+# # calculations below are done at the LME level, in each LME there are multiple EEZ and that's OK. 
+# # but in some EEZ there are multiple LME and that could be a problem... 
+# filter(trial, eez_country_name == "France")
+
+eez<-split(reconstructed_effort_ref_all, reconstructed_effort_ref_all$eez_country_name)
+
+# names(eez)
+
+trial_plot_list<-list()
+
+for(i in 1:length(eez)){
+  
+  # i = 1
+  trial<-eez[[i]] %>% 
+    group_by(Year, eez_country_name) %>% 
+    summarise(effort = sum(NomActive, na.rm =TRUE)) %>% 
+    ungroup()
+
+  trial_plot_list[[i]]<-ggplot(trial, aes(x = Year, y = effort))+
+    geom_point()+
+    geom_line()+
+    ggtitle(paste("EEZ", names(eez)[i], sep = " "))
+  
+}
+
+pdf("Output/EEZ.pdf", height = 8, width = 6)
+marrangeGrob(grobs = trial_plot_list, nrow=2, ncol=1)
+dev.off()
+
+# check eez
+# most evidently problematic - kenia (in LME 31 and LME0)
+# plot proportional contribution of each EEZ to LME 31 (or 0)
+
+a<-reconstructed_effort_ref_all %>% 
+  filter(eez_country_name == "Kenya")
+
+nLME<- 31
+
+a<-reconstructed_effort_ref_all %>% 
+  filter(eez_country_name == "Haiti")
+
+a<-reconstructed_effort_ref_all %>% 
+  filter(eez_country_name == "Cuba")
+
+nLME<- 12
+
+a<-reconstructed_effort_ref_all %>% 
+  filter(eez_country_name == "Angola")
+
+unique(a$LME)
+
+nLME<- 29
+
+data_plot_trial<-reconstructed_effort_ref_all %>% 
+  filter(LME == nLME) %>% 
+  # filter(eez_country_name %in% c("Cuba", "Haiti","Venezuela")) %>% 
+  group_by(Year, eez_country_name, LME) %>% 
+  summarise(NomActive = sum(NomActive, na.rm = TRUE)) %>% 
+  ungroup()
+
+plot<-ggplot(data = data_plot_trial, aes(x = Year, y = NomActive, group = eez_country_name, color = eez_country_name)) +
+  geom_line() +
+  geom_point(size=0.3)+
+  ggtitle(paste("LME", nLME, sep = " "))+
+  geom_vline(xintercept=1950, linetype="dashed", color = "red", size=0.5)+
+  geom_vline(xintercept=1960, linetype="dashed", color = "red", size=0.5)+
+  my_theme
+  # facet_wrap(~eez_country_name, scale = "free")
+
+# pdf("Output/Angola.pdf", height = 10, width = 12) # height = 8, width = 6)
+# plot
+# dev.off()
+
+```
+
+## save final data 
+
+```{r}
 # final data adjustment
 # head(reconstructed_effort_ref) # remove P, GT, NV, add spin-up, transition, experiment, validation column
-reconstructed_effort_ref<-reconstructed_effort_ref %>% 
+reconstructed_effort_ref_all<-reconstructed_effort_ref_all %>% 
   select(-P, -NV) %>% 
-  mutate(Phase = case_when (Year %in% c(1850:1949) ~ "spin-up",
-                            Year %in% c(1950:1961) ~ "transition",
-                            Year %in% c(1962:2010) ~ "experiment",
+  mutate(Phase = case_when (Year %in% c(1841:1860) ~ "spin-up",
+                            Year %in% c(1861:1960) ~ "transition",
+                            Year %in% c(1961:2010) ~ "experiment",
                             Year > 2010 ~ "validation"))
 
 
-head(reconstructed_effort_ref) 
+# head(reconstructed_effort_ref_all) 
 
 yannick_dir <- "/rd/gem/private/users/yannickr"
-# fwrite(x = reconstructed_effort_ref, file.path(yannick_dir, "effort_histsoc_1850_2017.csv"))
-# if total cacthes included discards 
-fwrite(x = reconstructed_effort_ref, file.path(yannick_dir, "effort_histsoc_1850_2017_discards.csv"))
+# after FishMIP meeting 
+fwrite(x = reconstructed_effort_ref_all, file.path(yannick_dir, "effort_histsoc_1841_2017.csv"))
+
+# fwrite(x = reconstructed_effort_ref_all, file.path(yannick_dir, "effort_histsoc_1850_2017.csv"))
+# if total cacthes included discards - no need see commetn above 
+# fwrite(x = reconstructed_effort_ref_all, file.path(yannick_dir, "effort_histsoc_1850_2017_discards.csv"))
 
 # DECISIONS: 
 # 1. war, not war for GAM on catch? WAR
